Use Hermit for package management